<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_one_motor</name>
  <version>1.0.0</version>
  <description>Package for control one dynamixel motor</description>

  <maintainer email="fegonzalez17@gmail.com">felipe</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_workbench_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>dynamixel_workbench_controllers</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
